fix(MegaMenu): add overflow scrolling for side nav

--- a/packages/styles/scss/components/masthead/_masthead-leftnav.scss
+++ b/packages/styles/scss/components/masthead/_masthead-leftnav.scss
@@ -94,6 +94,8 @@
     }
 
     &--expanded {
+      overflow-y: auto;
+
       @include carbon--breakpoint-down(md) {
         max-width: 100vw;
         width: 100vw;
